Cleanup OwnerSupervisor a bit
Use streaming to reduce funky copy/remove/remove cycle. This way
we perform minimal needed materialization.

Change-Id: I0cf25fc7bb57e2d053cb4368cdd4ac8905995e42
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>